# particles-compute-vulkan

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
inc/: loggerConfig.h  tApp.h  tTimer.h
inc/engine/: tCamera.h  tGui.h  tRenderer.h  tSwapchain.h  tVulkanDevice.h  tVulkanInstance.h  tWindow.h
inc/helpers/: createBuffer.h  loadShaders.h  memoryAllocation.h
inc/sim/: constants.h  tParticle.h  tPhysics.h  tSim.h
shaders/: CMakeLists.txt  forceNaive.comp  fragment.frag  mesh.mesh  task.task
src/: CMakeLists.txt  loggerConfig.cpp  main.cpp  tApp.cpp  tTimer.cpp
src/engine/: CMakeLists.txt  tCamera.cpp  tGui.cpp  tRenderer.cpp  tSwapchain.cpp  tVulkanDevice.cpp  tVulkanInstance.cpp  tWindow.cpp
src/helpers/: CMakeLists.txt  createBuffer.cpp  loadShaders.cpp  memoryAllocation.cpp
src/sim/: CMakeLists.txt  tPhysics.cpp  tSim.cpp
tst/: CMakeLists.txt  tApp_test.cpp  tRenderer_test.cpp  tSwapchain_test.cpp  tVulkanDevice_test.cpp  tVulkanInstance_test.cpp  tWindow_test.cpp
